--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
@@ -1,165 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/userId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="umc_3rd_android"
+        android:text="umc"
+        android:layout_margin="10dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toStartOf="@id/plus"
+        app:layout_constraintEnd_toStartOf="@+id/linerlayout1"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="10dp"
-        />
-    <ImageButton
-        android:id="@+id/plus"
-        android:background="@android:color/transparent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_plus"
-        app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toStartOf="@id/menu"
-        app:layout_constraintStart_toEndOf="@id/userId"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        />
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_hamburger"
-        android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/plus"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="10dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/linerlayout1"
+        android:layout_width="98dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/userId"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/ic_plus" />
+
+        <ImageButton
+            android:id="@+id/menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/ic_hamburger" />
+    </LinearLayout>
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/ic_profile_default"
+        android:layout_marginStart="30dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toStartOf="@id/postCount"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userId"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        android:layout_marginStart="30dp"/>
-<androidx.appcompat.widget.LinearLayoutCompat
-    android:id="@+id/postCount"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@id/name"
-    app:layout_constraintEnd_toStartOf="@id/followerCount"
-    app:layout_constraintStart_toEndOf="@id/profile"
-    app:layout_constraintTop_toBottomOf="@id/userId"
-    android:orientation = "vertical"
-    android:gravity="center"
-    >
-    <TextView
+        app:srcCompat="@drawable/ic_profile_default" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/postCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="게시물"/>
-</androidx.appcompat.widget.LinearLayoutCompat>
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/name"
+        app:layout_constraintEnd_toStartOf="@id/followerCount"
+        app:layout_constraintStart_toEndOf="@id/profile"
+        app:layout_constraintTop_toBottomOf="@id/userId">
+
+        <TextView
+            android:id="@+id/postCount_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="게시물"
+            android:textSize="16sp" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/followerCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toStartOf="@id/followingCount"
         app:layout_constraintStart_toEndOf="@id/postCount"
-        app:layout_constraintTop_toBottomOf="@id/userId"
-        android:orientation = "vertical"
-        android:gravity="center">
+        app:layout_constraintTop_toBottomOf="@id/userId">
+
         <TextView
+            android:id="@+id/followerCount_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="팔로워"/>
+            android:text="팔로워"
+            android:textSize="16sp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/followingCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/followerCount"
-        app:layout_constraintTop_toBottomOf="@id/userId"
-        android:orientation = "vertical"
-        android:gravity="center"
-        android:layout_marginEnd="40dp">
+        app:layout_constraintTop_toBottomOf="@id/userId">
+
         <TextView
+            android:id="@+id/followingCount_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="팔로잉"/>
+            android:text="팔로잉"
+            android:textSize="16sp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_marginStart="20dp"
         android:text="가천대학교 UMC 3기 안드로이드"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile"
-        android:layout_marginStart="20dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/profile" />
+
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_marginStart="20dp"
         android:text="설명"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/editPro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        android:layout_marginStart="20dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/editPro"
@@ -232,13 +239,12 @@
         android:id="@+id/sixthLinear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/midConstraint"
-        app:layout_constraintBottom_toTopOf="@id/tab_layout"
-        android:orientation="vertical"
-        android:layout_marginStart="20dp"
-        >
+        app:layout_constraintTop_toBottomOf="@id/midConstraint">
 
         <TextView
             android:id="@+id/textView2"
@@ -263,21 +269,27 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/view_pager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sixthLinear"
-        app:layout_constraintBottom_toTopOf="@+id/view_pager"
 
-        app:tabIndicatorColor="@color/black"/>
+        app:tabIndicatorColor="@color/black" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="122dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
