--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_post.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_post.xml
@@ -28,7 +28,7 @@
 
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
