--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
@@ -9,63 +9,68 @@
         android:id="@+id/userId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
         android:gravity="center"
         android:text="umc_3rd_android"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toStartOf="@id/plus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="10dp"
-        />
-    <ImageButton
-        android:id="@+id/plus"
-        android:background="@android:color/transparent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_plus"
-        app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toStartOf="@id/menu"
-        app:layout_constraintStart_toEndOf="@id/userId"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        />
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_hamburger"
-        android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@id/profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/plus"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="10dp"
         />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/plus"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toStartOf="@+id/menu"
+            app:srcCompat="@drawable/ic_plus" />
+
+        <ImageButton
+            android:id="@+id/menu"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_hamburger" />
+
+
+    </LinearLayout>
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/profile"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/ic_profile_default"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@id/name"
-        app:layout_constraintEnd_toStartOf="@id/postCount"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userId"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        android:layout_marginStart="30dp"/>
-<androidx.appcompat.widget.LinearLayoutCompat
+        app:srcCompat="@drawable/ic_profile_default"
+        app:layout_constraintTop_toBottomOf="@+id/userId"
+        app:layout_constraintStart_toStartOf="@+id/userId"
+         />
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
     android:id="@+id/postCount"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@id/name"
-    app:layout_constraintEnd_toStartOf="@id/followerCount"
+        android:layout_marginTop="45dp"
+        android:layout_marginStart="80dp"
     app:layout_constraintStart_toEndOf="@id/profile"
     app:layout_constraintTop_toBottomOf="@id/userId"
     android:orientation = "vertical"
@@ -76,13 +81,13 @@
         android:layout_height="wrap_content"
         android:text="0"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="12sp"
         android:text="게시물"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -90,10 +95,9 @@
         android:id="@+id/followerCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/name"
-        app:layout_constraintEnd_toStartOf="@id/followingCount"
+        android:layout_marginStart="50dp"
         app:layout_constraintStart_toEndOf="@id/postCount"
-        app:layout_constraintTop_toBottomOf="@id/userId"
+        app:layout_constraintTop_toTopOf="@+id/postCount"
         android:orientation = "vertical"
         android:gravity="center">
         <TextView
@@ -101,21 +105,21 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:text="팔로워"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/followingCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/name"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="50dp"
+        app:layout_constraintTop_toTopOf="@id/postCount"
         app:layout_constraintStart_toEndOf="@id/followerCount"
         app:layout_constraintTop_toBottomOf="@id/userId"
         android:orientation = "vertical"
@@ -126,13 +130,13 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:text="팔로잉"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -140,60 +144,63 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="가천대학교 UMC 3기 안드로이드"
+        android:textSize="12sp"
+        android:text="김현지"
+        android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         />
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="12sp"
         android:text="설명"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@id/editPro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/editPro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_width="330dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/view_round_r8"
         android:backgroundTint="#ECECEC"
-        android:paddingStart="130dp"
-        android:paddingEnd="130dp"
         android:text="프로필 편집"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/midConstraint"
-        app:layout_constraintEnd_toStartOf="@id/recomFriend"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/info" />
 
     <ImageButton
         android:id="@+id/recomFriend"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:padding="5dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/view_round_r8"
         android:backgroundTint="#ECECEC"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@id/midConstraint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/editPro"
-        app:layout_constraintTop_toBottomOf="@id/info"
+        app:layout_constraintTop_toTopOf="@+id/editPro"
         app:srcCompat="@drawable/ic_recommend_friend" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/midConstraint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/sixthLinear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,10 +210,10 @@
             android:id="@+id/highlight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:text="스토리 하이라이트"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/midConstraint"
             app:layout_constraintEnd_toStartOf="@id/arrowBtm"
@@ -237,13 +244,14 @@
         app:layout_constraintTop_toBottomOf="@id/midConstraint"
         app:layout_constraintBottom_toTopOf="@id/tab_layout"
         android:orientation="vertical"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         >
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:text="좋아하는 스토리를 프로필에 보관해보세요"
             android:textColor="#000000" />
 
